Añadidos título,botones e imagen

--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
 
 </head>
 <body>
+    <header>
+        <h1>
+        Wheel of doom
+        </h1>
+    </header>
+    <div class="container">
+        <div class="image">
+            <div class="buttons">
+                <button>Elegir voluntaria</button>
+                <button>Reiniciar sesión</button>
+                <button>Crear grupos</button>   
+            </div>
+            <img src="img/cats.jpg" alt="gatos con pizarra">
+            <div class="answer">              
+            </div>
+        </div>
+        <div></div>
+
+    </div>
     
 </body>
 </html>
