flex box para content

--- a/index.html
+++ b/index.html
@@ -36,88 +36,91 @@
                     <option value="12">12</option>
                  </select>   
             </div>
-            <h2 class="list-title">
-                Lista de coders
-            </h2>
-            <ul class="list">
-                <li class="coder">Sara
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Judith
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Helen
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Tamara
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Candy
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Laura Contreras
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Gabrielle
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Carmen
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Yuliya
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Anna Girona
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Desirée
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Sonia
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Joana
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Ana Casas
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Alisa
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Faby
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Valentina
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Laura Mayas
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Rosa
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Sandra
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Kristina
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Gràcia
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Alexia
-                   <button class="eliminar">Eliminar</button>
-                </li>
-                <li class="coder">Marisa
-                   <button class="eliminar">Eliminar</button>
-                </li>
-             </ul>
+            <div class="content">
+                <div class="list-content">
+                    <h2 class="list-title">
+                        Lista de coders
+                    </h2>
+                    <ul class="list">
+                        <li class="coder">Sara
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Judith
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Helen
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Tamara
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Candy
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Laura Contreras
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Gabrielle
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Carmen
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Yuliya
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Anna Girona
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Desirée
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Sonia
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Joana
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Ana Casas
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Alisa
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Faby
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Valentina
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Laura Mayas
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Rosa
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Sandra
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Kristina
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Gràcia
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Alexia
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                        <li class="coder">Marisa
+                        <button class="eliminar">Eliminar</button>
+                        </li>
+                    </ul>
+                </div>
 
-            <div class="image">
-                <img src="img/cats-dia.jpg" alt="gatos con pizarra">
+                <div class="image">
+                    <img src="img/cats-dia.jpg" alt="gatos con pizarra">
+                </div>
             </div>
-            
             <div class="answer">              
             </div>
         
