--- a/index.html
+++ b/index.html
@@ -21,98 +21,78 @@
                 <button>Elegir voluntaria</button>
                 <button>Reiniciar sesión</button>
                 <button>Crear grupos</button>
-                <select class="select" name="select">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                    <option value="11">11</option>
-                    <option value="12">12</option>
-                 </select>   
+                <form action="#">
+                    <label class="number-of-groups" for="select">№ de grupos</label>
+                    <select class="select" name="select">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                    </select>
+                </form>
+      
             </div>
             <div class="content">
                 <div class="list-content">
-                    <h2 class="list-title">
+                    <h4 class="list-title">
                         Lista de coders
-                    </h2>
+                    </h4>
                     <ul class="list">
                         <li class="coder">Sara
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Judith
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Helen
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Tamara
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Candy
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Laura Contreras
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Gabrielle
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Carmen
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Yuliya
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Anna Girona
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Desirée
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Sonia
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Joana
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Ana Casas
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Alisa
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Faby
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Valentina
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Laura Mayas
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Rosa
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Sandra
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Kristina
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Gràcia
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Alexia
-                        <button class="eliminar">Eliminar</button>
                         </li>
                         <li class="coder">Marisa
-                        <button class="eliminar">Eliminar</button>
                         </li>
                     </ul>
                 </div>
