--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>CHEEKY CATS</title>
+    <link rel="shortcut icon" href="/img/mascara-de-gato.ico">
 	<link rel="stylesheet" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="main.js"></script>
@@ -15,14 +16,14 @@
 <body>
 	<header>
 		<h1>
-			Wheel of doom
+		<img class="mascara" src="/img/mascara-de-gato.ico" alt="máscara de gato"/>  CHEEKY CATS  <img class="mascara" src="/img/mascara-de-gato.ico" alt="máscara de gato"/>
 		</h1>
 	</header>
 	<main class="container">
 		<div class="buttons">
-			<button>Elegir voluntaria</button>
-			<button>Reiniciar sesión</button>
-			<button>Crear grupos</button>
+			<button class="btn">Elegir voluntaria</button>
+			<button class="btn">Reiniciar sesión</button>
+			<button class="btn">Crear grupos</button>
 			<form class="form" action="#">
 				<label class="number-of-groups" for="select">№ de grupos</label>
 				<select class="select" name="select">
