nuevo titulo, fondo y ovillos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>CHEEKY CATS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Rubik+Beastly&display=swap" rel="stylesheet">
+
+	<title>Cheeky Cats</title>
     <link rel="shortcut icon" href="/img/mascara-de-gato.ico">
 	<link rel="stylesheet" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -16,7 +20,7 @@
 <body>
 	<header>
 		<h1>
-		<img class="mascara" src="/img/mascara-de-gato.ico" alt="máscara de gato"/>  CHEEKY CATS  <img class="mascara" src="/img/mascara-de-gato.ico" alt="máscara de gato"/>
+		cheeky cats
 		</h1>
 	</header>
 	<main class="container">
@@ -48,35 +52,35 @@
 					Lista de coders
 				</h2>
 				<ul class="list">
-					<li class="coder">Sara</li>
-					<li class="coder">Judith</li>
-					<li class="coder">Helen</li>
-					<li class="coder">Tamara</li>
-					<li class="coder">Candy</li>
-					<li class="coder">Laura Contreras</li>
-					<li class="coder">Gabrielle</li>
-					<li class="coder">Carmen</li>
-					<li class="coder">Yuliya</li>
-					<li class="coder">Anna Girona</li>
-					<li class="coder">Desirée</li>
-					<li class="coder">Sonia</li>
-					<li class="coder">Joana</li>
-					<li class="coder">Ana Casas</li>
-					<li class="coder">Alisa</li>
-					<li class="coder">Faby</li>
-					<li class="coder">Valentina</li>
-					<li class="coder">Laura Mayas</li>
-					<li class="coder">Rosa</li>
-					<li class="coder">Sandra</li>
-					<li class="coder">Kristina</li>
-					<li class="coder">Gràcia</li>
-					<li class="coder">Alexia</li>
-					<li class="coder">Marisa</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Sara</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Judith</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Helen</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Tamara</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Candy</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Laura Contreras</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Gabrielle</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Carmen</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Yuliya</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Anna Girona</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Desirée</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Sonia</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Joana</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Ana Casas</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Alisa</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Faby</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Valentina</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Laura Mayas</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Rosa</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Sandra</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Kristina</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Gràcia</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Alexia</li>
+					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Marisa</li>
 				</ul>
 			</div>
 
 			<div class="image">
-				<img src="img/cats-dia.jpg" alt="gatos con pizarra">
+				<img src="/img/cats-noche.png" alt="gatos con pizarra">
 			</div>
 		</div>
 		<div class="answer">
