cambio de estructura de la página,Lista de coders dos columnas

--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Beastly&display=swap" rel="stylesheet">
-
 	<title>Cheeky Cats</title>
-    <link rel="shortcut icon" href="/img/mascara-de-gato.ico">
+	<link rel="shortcut icon" href="/img/mascara-de-gato.ico">
 	<link rel="stylesheet" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="main.js"></script>
@@ -18,75 +17,90 @@
 </head>
 
 <body>
+
+	<!------------------------------HEADER-------------------------------------->
 	<header>
 		<h1>
-		cheeky cats
+			cheeky cats
 		</h1>
 	</header>
+
+	<!-------------------------------MAIN--------------------------------------->
 	<main class="container">
-		<div class="buttons">
-			<button class="btn">Elegir voluntaria</button>
-			<button class="btn">Reiniciar sesión</button>
-			<button class="btn">Crear grupos</button>
-			<form class="form" action="#">
-				<label class="number-of-groups" for="select">№ de grupos</label>
-				<select class="select" name="select">
-					<option value="1">1</option>
-					<option value="2">2</option>
-					<option value="3">3</option>
-					<option value="4">4</option>
-					<option value="5">5</option>
-					<option value="6">6</option>
-					<option value="7">7</option>
-					<option value="8">8</option>
-					<option value="9">9</option>
-					<option value="10">10</option>
-					<option value="11">11</option>
-					<option value="12">12</option>
-				</select>
-
-		</div>
+		<!---------------------------CONTENT------------------------------------>
 		<div class="content">
+			<!------------------------LISTA--(CONTENT)---------------------------->
+
 			<div class="list-content">
-				<h2 class="list-title">
-					Lista de coders
-				</h2>
-				<ul class="list">
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Sara</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Judith</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Helen</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Tamara</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Candy</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Laura Contreras</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Gabrielle</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Carmen</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Yuliya</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Anna Girona</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Desirée</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Sonia</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Joana</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Ana Casas</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Alisa</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Faby</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Valentina</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Laura Mayas</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Rosa</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Sandra</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Kristina</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Gràcia</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Alexia</li>
-					<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Marisa</li>
-				</ul>
-			</div>
+				<h2 class="list-title">Lista de coders</h2>
+				<div class="lists">
+					<ul class="list one">
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Sara</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Judith</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Helen</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Tamara</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Candy</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Laura Contreras</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Gabrielle</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Carmen</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Yuliya</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Anna Girona</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Desirée</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Sonia</li>
+					</ul>
+					<ul class="list two">
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Joana</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Ana Casas</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Alisa</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Faby</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Valentina</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Laura Mayas</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Rosa</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Sandra</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Kristina</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Gràcia</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Alexia</li>
+						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Marisa</li>
+					</ul>
+				</div>
 
-			<div class="image">
-				<img src="/img/cats-noche.png" alt="gatos con pizarra">
+			</div>
+			<!----------------------- BUTTONS (CONTENT) -------------------------->
+
+			<div class="buttons-image-container">
+				<div class="buttons">
+					<button class="btn">Elegir voluntaria</button>
+					<button class="btn">Reiniciar sesión</button>
+					<form class="form" action="#">
+						<label class="number-of-groups" for="select">№ de grupos</label>
+						<select class="select" name="select">
+							<option value="1">1</option>
+							<option value="2">2</option>
+							<option value="3">3</option>
+							<option value="4">4</option>
+							<option value="5">5</option>
+							<option value="6">6</option>
+							<option value="7">7</option>
+							<option value="8">8</option>
+							<option value="9">9</option>
+							<option value="10">10</option>
+							<option value="11">11</option>
+							<option value="12">12</option>
+						</select>
+						<button class="btn grupos">Crear grupos</button>
+					</form>
+				</div>
+				<!---------------------- IMAGE (CONTENT) -------------------------->
+
+				<div class="image">
+					<img src="/img/cats-noche2.png" alt="gatos con pizarra">
+				</div>
 			</div>
 		</div>
-		<div class="answer">
-		</div>
+		<!---------------------FINAL DE CONTENT--------------------------------->
 
-		<div></div>
+		<!----------------------- ANSWER (PARA JS) ----------------------------------->
+		<div class="answer"></div>
 
 	</main>
 
