anadidos estilos para elementos dentro de los que van a aparecer resultados de scripts

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
 			<div class="buttons-image-container">
 				<div class="buttons">
-					<button class="btn">Elegir voluntaria</button>
-					<button class="btn">Reiniciar sesión</button>
+					<button id="btn-start">Elegir voluntaria</button>
+					<button id="btn-reiniciar">Reiniciar sesión</button>
 					<form class="form" action="#">
 						<label class="number-of-groups" for="select">№ de grupos</label>
 						<select class="select" name="select">
@@ -87,20 +87,20 @@
 							<option value="11">11</option>
 							<option value="12">12</option>
 						</select>
-						<button class="btn grupos">Crear grupos</button>
 					</form>
+					<button id="btn-grupos" class="btn grupos">Crear grupos</button>
 				</div>
 				<!---------------------- IMAGE (CONTENT) -------------------------->
 
 				<div class="image">
 					<img src="/img/cats-noche2.png" alt="gatos con pizarra">
+					<div class="answer"></div>
 				</div>
 			</div>
 		</div>
 		<!---------------------FINAL DE CONTENT--------------------------------->
 
 		<!----------------------- ANSWER (PARA JS) ----------------------------------->
-		<div class="answer"></div>
 
 	</main>
 
