nuevo link fotos

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Rubik+Beastly&display=swap" rel="stylesheet">
 	<title>Cheeky Cats</title>
-	<link rel="shortcut icon" href="/img/mascara-de-gato.ico">
+	<link rel="shortcut icon" href="img\mascara-de-gato.ico">
 	<link rel="stylesheet" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="main.js"></script>
@@ -35,32 +35,32 @@
 				<h2 class="list-title">Lista de coders</h2>
 				<div class="lists">
 					<ul class="list one">
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Sara</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Judith</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Helen</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Tamara</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Candy</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Laura Contreras</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Gabrielle</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Carmen</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Yuliya</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Anna Girona</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Desirée</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Sonia</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Sara</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Judith</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Helen</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Tamara</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Candy</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Laura Contreras</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Gabrielle</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Carmen</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Yuliya</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Anna Girona</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Desirée</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Sonia</li>
 					</ul>
 					<ul class="list two">
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Joana</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Ana Casas</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Alisa</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Faby</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Valentina</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Laura Mayas</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Rosa</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Sandra</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Kristina</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Gràcia</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Alexia</li>
-						<li class="coder"><img class="ovillo" src="/img/juguete-de-gato.ico">Marisa</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Joana</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Ana Casas</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Alisa</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Faby</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Valentina</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Laura Mayas</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Rosa</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Sandra</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Kristina</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Gràcia</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Alexia</li>
+						<li class="coder"><img class="ovillo" src="img\juguete-de-gato.ico">Marisa</li>
 					</ul>
 				</div>
 
@@ -93,7 +93,7 @@
 				<!---------------------- IMAGE (CONTENT) -------------------------->
 
 				<div class="image">
-					<img src="/img/cats-noche2.png" alt="gatos con pizarra">
+					<img src="img\cats-noche2.png" alt="gatos con pizarra">
 					<div class="answer"></div>
 				</div>
 			</div>
