añadido @media (max-width: 1024px), nombres en array y la lista sin apellido

--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
 						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Tamara</li>
 						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Sara</li>
 						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Candy</li>
-						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Laura Contreras</li>
+						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Laura C.</li>
 						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Gabrielle</li>
 						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Carmen</li>
 						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Yuliya</li>
-						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Anna Girona</li>
+						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Anna G.</li>
 						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Desirée</li>
 						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Sonia</li>
 					</ul>
 					<ul class="list two">
 						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Joana</li>
-						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Ana Casas</li>
+						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Ana C.</li>
 						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Alisa</li>
 						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Faby</li>
 						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Valentina</li>
-						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Laura Mayas</li>
+						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Laura M.</li>
 						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Rosa</li>
 						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Sandra</li>
 						<li class="coder"><img class="ovillo" src="Assets\juguete-de-gato.ico">Kristina</li>
